# libaudioDB

./: .gitignore  INSTALL.txt  Makefile  Makefile.linux  Makefile.osx  Makefile.osx-x86_64  Makefile.win32  MakefileLSH  QueryADB.py  README.txt  ReporterBase.h  TODO.txt  UNIT_TEST_LSH.cpp  accumulator.h  accumulator_test.cpp  accumulators.h  audioDB-internals.h  audioDB.cpp  audioDB.h  audioDB.man  audioDB_API.h  audioDBws.h  close.cpp  common.cpp  create.cpp  dbaccumulator.h  dump.cpp  gengetopt.in  index-utils.cpp  index.cpp  insert.cpp  l2norm.cpp  liszt.cpp  lock.cpp  lshlib.cpp  lshlib.h  make-pc.sh  mingw-cross.mk  multiprobe.cpp  nearestaccumulator.h  (+13 more)
docs/: TODO.txt
docs/spec/: fv0.tikz  fv1.tikz  fv2.tikz  fv3.tikz  fv4.tikz  fv5.tikz  fv6.tikz  fv7.tikz  interval-index.tikz  segmented-track.tikz  spec.tex  track-feature-vectors.tikz  track.tikz
include/audioDB/: accumulator.h  accumulators.h  audioDB-internals.h  audioDB_API.h  dbaccumulator.h  lshlib.h  multiprobe.h  nearestaccumulator.h  pertrackaccumulator.h  reporter.h
libtests/: .gitignore  clean.sh  libtest.mk  notes  run-tests.sh  test-utils.sh  test_utils_lib.h
libtests/0001/: Makefile  prog1.c  short-description
libtests/0002/: prog1.c  short-description
libtests/0003/: prog1.c  run-test.sh  short-description
libtests/0004/: prog1.c  short-description
libtests/0005/: prog1.c  short-description
libtests/0006/: prog1.c  short-description
libtests/0007/: Makefile  prog1.c  short-description
libtests/0008/: prog1.c  short-description
libtests/0009/: prog1.c  run-test.sh  short-description
libtests/0010/: prog1.c  short-description
libtests/0011/: prog1.c  short-description
libtests/0012/: prog1.c  short-description
libtests/0022/: prog1.c  short-description
libtests/0023/: Makefile  prog1.c  short-description
libtests/0024/: prog1.c  short-description
libtests/0025/: prog1.c  short-description
libtests/0026/: prog1.c  short-description
libtests/0027/: prog1.c  short-description
libtests/0028/: prog1.c  short-description
libtests/0029/: prog1.c  short-description
libtests/0030/: prog1.c  short-description
libtests/0031/: prog1.c  short-description
libtests/0032/: prog1.c  short-description
libtests/0033/: prog1.c  short-description
libtests/0034/: prog1.c  short-description
libtests/0035/: prog1.c  short-description
libtests/0036/: prog1.c  short-description
libtests/0037/: prog1.c  short-description
libtests/0039/: prog1.c  short-description
libtests/0048/: prog1.c  short-description
libtests/0049/: prog1.c  short-description
libtests/9000/: prog1.c  short-description
sparql/examples/: retrieve_all_tracks.rq  retrieve_distance.rq  retrieve_top_5.rq  retrieve_track.rq
sparql/librdf/: Makefile.am  README  configure.ac
sparql/librdf/src/: Makefile.am  rdf_storage_audiodb.c
sparql/mod_audiodb/: Makefile.am  README  configure.ac  mod_audiodb.c
sparql/tests/: storage_test.c
src/: accumulator_test.cpp  build_info.cpp  close.cpp  create.cpp  dump.cpp  index-utils.cpp  insert.cpp  l2norm.cpp  liszt.cpp  lock.cpp  lshlib.cpp  multiprobe.cpp  open.cpp  pointpair.cpp  power.cpp  query-indexed.cpp  query.cpp  retrieve.cpp  sample.cpp  status.cpp  xthresh.c
tests/: .gitignore  run-tests.sh  test-utils.sh
tests/0001/: run-test.sh
tests/0002/: run-test.sh
tests/0003/: run-test.sh  short-description
tests/0004/: run-test.sh  short-description
tests/0005/: run-test.sh  short-description
tests/0006/: run-test.sh  short-description
tests/0007/: run-test.sh
tests/0008/: run-test.sh
tests/0009/: run-test.sh
tests/0010/: run-test.sh
tests/0011/: run-test.sh
tests/0012/: run-test.sh  short-description
tests/0013/: run-test.sh  short-description
tests/0014/: run-test.sh  short-description
tests/0015/: run-test.sh  short-description
tests/0016/: run-test.sh  short-description
tests/0017/: run-test.sh  short-description
tests/0018/: run-test.sh  short-description
tests/0019/: run-test.sh  short-description
tests/0020/: run-test.sh  short-description
tests/0021/: run-test.sh  short-description
tests/0022/: run-test.sh  short-description
tests/0023/: run-test.sh  short-description
tests/0024/: run-test.sh  short-description
tests/0025/: run-test.sh  short-description
tests/0026/: run-test.sh  short-description
tests/0027/: run-test.sh  short-description
tests/0028/: run-test.sh  short-description
tests/0029/: run-test.sh  short-description
tests/0030/: run-test.sh  short-description
tests/0031/: run-test.sh  short-description
tests/0032/: run-test.sh  short-description
tests/0033/: run-test.sh  short-description
tests/0034/: run-test.sh  short-description
tests/0035/: run-test.sh  short-description
tests/0036/: run-test.sh  short-description
tests/0037/: run-test.sh  short-description
tests/0038/: run-test.sh  short-description
tests/0039/: run-test.sh  short-description
tests/0040/: run-test.sh  short-description
tests/0041/: run-test.sh  short-description
tests/0042/: run-test.sh  short-description
tests/0043/: clean.sh  run-test.sh  short-description
tests/0044/: run-test.sh  short-description
tests/0045/: run-test.sh  short-description
tests/0046/: run-test.sh  short-description
tests/0047/: run-test.sh  short-description
tests/0050/: run-test.sh
tests/9000/: run-test.sh  short-description
tests/pointset_test/: genpoints2.c  lshL.m  lshP.m  lshP2.m  lshRho.m  plotLSHresults.m  run-test.sh
